# moodeSky

./: .env.example  .gitignore  .mcp.example.json  .mcp.json  .mcp.json.example  CLAUDE.md  DEVELOPMENT.md  GEMINI.md  README.md  analyze_output.txt  build_optimization.yaml  iOS_SETUP.md  import_sorter.yaml  l10n.yaml  pubspec.yaml
.claude/: settings.json
.claude/hooks/: desktop-notify.js  discord-notify.js  typecheck.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml  mobile.yml  release.yml  security.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
atproto_rag/: README.md  main.py  pyproject.toml
atproto_rag/atproto_rag/: __init__.py  models.py  vectorizer.py
dev_rag/: CLAUDE.md  README.md  main.py  pyproject.toml
dev_rag/dev_rag/: __init__.py  vectorizer.py
docs/: BLUESKY_INTEGRATION.md  CLAUDE_OLD_2025-06-24.md  DEEP_RESET.md  DEVELOPMENT_RULES.md  PEP_PRINCIPLES.md  PLATFORM_SUPPORT.md  PRODUCT_SPECIFICATION.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  iOS_SETUP.md  index.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: demo_main.dart  main.dart  server_selection_demo.dart  simple_server_demo.dart
lib/core/providers/: auth_provider.dart  database_provider.dart  deck_provider.dart  locale_provider.dart  theme_provider.dart
lib/core/theme/: app_fonts.dart  app_themes.dart
lib/features/auth/models/: server_config.dart
lib/features/auth/screens/: add_account_screen.dart  enhanced_login_screen.dart  (+1 more)
lib/l10n/: app_de.arb  app_en.arb  app_ja.arb  app_ko.arb  app_localizations.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_ja.dart  app_localizations_ko.dart  app_localizations_pt.dart  app_pt.arb  app_pt_BR.arb
lib/services/: bluesky_service.dart
lib/services/bluesky/: bluesky_service_v2.dart  index.dart
lib/services/database/: database.dart
lib/shared/models/: auth_models.dart
lib/shared/utils/: embed_converter.dart  url_utils.dart  user_display_utils.dart
lib/shared/widgets/: bluesky_facet_text.dart  deck_item.dart  embed_view_widget.dart  language_selector.dart  post_item.dart  rich_text_widget.dart  simple_repost_widget.dart  theme_selector.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
moodeSky/: .gitignore  CLAUDE.md  ISSUE_92_PLAN.md  ambient.d.ts  components.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts  vitest.config.ts  vitest.d.ts
moodeSky/.claude/: settings.local.json.example
moodeSky/docs/: EMBEDDING_DATA_FLOW.md
moodeSky/project.inlang/: project_id  settings.json
moodeSky/src/: app.css  app.d.ts  app.html  test-setup.ts  vite-env.d.ts  vitest.d.ts
moodeSky/src-tauri/: Cargo.toml  tauri.conf.json
moodeSky/src-tauri/capabilities/: default.json
moodeSky/src-tauri/migrations/: 001_initial_schema.sql
moodeSky/src-tauri/src/: auth.rs  database.rs  lib.rs  main.rs  models.rs
moodeSky/src/routes/: +layout.svelte  +page.svelte
moodeSky/test-results/: .last-run.json
moodeSky/tests/: avatar-cache-integration.spec.ts  basic-app.spec.ts  type-check.ts
scripts/: notify_sound.sh  optimized_build.sh  setup_aliases.sh
test/: test_helpers.dart  widget_test.dart
test/core/providers/: auth_provider_add_account_test.dart
test/services/: bluesky_service_preferences_test.dart  bluesky_service_profile_test.dart
test/services/bluesky/: token_error_handling_test.dart
test/shared/models/: auth_models_test.dart  preferences_models_test.dart
test/shared/widgets/: embed_video_widget_test.dart  feed_view_post_item_test.dart  rich_text_widget_test.dart  simple_repost_test.dart
web/: index.html  manifest.json
web/.well-known/: apple-app-site-association
web/oauth/: callback.html  client-metadata.json  https-client-metadata.json  local-client-metadata.json  success.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+240 files in other folders)
