[project]
name = "atproto-rag"
version = "0.1.0"
description = "AT Protocol repository vectorization for RAG with Qdrant MCP"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
atproto-rag = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
