[project]
name = "dev-rag"
version = "0.1.0"
description = "Development documentation vectorization for RAG with Qdrant MCP"
requires-python = ">=3.12"
dependencies = [
    # Core vectorization
    "qdrant-client>=1.7.0",
    "fastembed>=0.2.0",
    
    # Core functionality
    "gitpython>=3.1.0",
    "rich>=13.0.0",
    "fire>=0.5.0",
    "pydantic>=2.0.0",
    
    # Performance optimization
    "tenacity>=8.0.0",  # Retry logic for API calls
    "psutil>=5.9.0",    # Memory monitoring
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]

[project.scripts]
dev-rag = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
